<resources>
    <!--  App name  -->
    <string name="app_name">Devicer 2</string>

    <!--  Content descriptors  -->
    <string name="descriptor_app_logo">Devicer application logo</string>
    <string name="descriptor_user_profile_picture">User profile picture</string>
    <string name="descriptor_device">device</string>

    <!--  Buttons text  -->
    <string name="button_log_in">Log In</string>
    <string name="button_log_in_underscored"><u>Log In</u></string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_up_underscored"><u>Sign Up</u></string>
    <string name="button_logout">Logout</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_turn_off">Turn Off</string>
    <string name="button_turn_on">Turn On</string>

    <!--  Titles  -->
    <string name="title_hello_log_in">Hello,\nLog In</string>
    <string name="title_don_t_have_account">Don\'t have an account?</string>
    <string name="title_create_account">Create\nAccount</string>
    <string name="title_already_have_account">Already hane an account?</string>
    <string name="title_device_type">Device type:</string>
    <string name="title_device_model">Device model:</string>
    <string name="title_name">Name:</string>
    <string name="title_model">Model:</string>
    <string name="title_serial">Serial:</string>
    <string name="title_mac">MAC:</string>
    <string name="title_firmware">Firmware:</string>

    <!--  Hints  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_name">Enter name</string>

    <!--  Placeholders for textview  -->
    <string name="device_serial">"SN: %s"</string>
    <string name="percentage">"%d %%"</string>
    <string name="wattage">"%d W"</string>
    <string name="temperature_celsius">"%d ˚C"</string>
    <string name="undefined_model">Undefined model!</string>
</resources>