<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/tvHelloLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title_hello_log_in"
        android:textSize="20sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="Input your email"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etPassword"/>

    <EditText
        android:id="@+id/etPassword"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="Input your password"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintBottom_toTopOf="@id/btnLogIn"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/button_log_in"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvDoNotHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title_don_t_have_account"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSignUpScreen"/>

    <Button
        android:id="@+id/btnSignUpScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/button_sign_up"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>