<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_device_type"

        android:text="@string/title_device_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_device_types"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_device_type"/>

    <TextView
        android:id="@+id/tv_device_model"

        android:text="@string/title_device_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/sp_device_types"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_device_models"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_device_model"/>

    <TextView
        android:id="@+id/tv_name"

        android:text="@string/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/sp_device_models"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_name"

        android:hint="@string/enter"
        android:inputType="text"
        android:autofillHints="Input your device name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_name" />


    <Button
        android:id="@+id/btn_cancel_adding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/button_cancel"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"/>

    <Button
        android:id="@+id/btn_add_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/button_add"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"/>


</androidx.constraintlayout.widget.ConstraintLayout>