<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:background="@color/primary">

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title_create_account"
        android:fontFamily="@font/inter_semi_bold"
        android:textColor="@color/on_secondary"
        android:textSize="@dimen/h1"

        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="Input your email"

            android:background="@drawable/edittext_background"
            android:textColorHint="@color/on_secondary_dimmed"
            android:textColor="@color/on_secondary"

            android:paddingStart="38dp"
            tools:ignore="RtlSymmetry"
            android:textSize="@dimen/edittext_text_size"

            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            app:layout_constraintWidth_max="320dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/ic_letter"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="@id/etEmail"
            app:layout_constraintTop_toTopOf="@id/etEmail"
            app:layout_constraintBottom_toBottomOf="@id/etEmail"
            android:layout_margin="13dp"/>

        <EditText
            android:id="@+id/etName"
            android:hint="@string/name"
            android:inputType="text"
            android:autofillHints="Input your name"

            android:background="@drawable/edittext_background"
            android:textColorHint="@color/on_secondary_dimmed"
            android:textColor="@color/on_secondary"

            android:paddingStart="38dp"
            tools:ignore="RtlSymmetry"
            android:textSize="@dimen/edittext_text_size"

            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginTop="24dp"

            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_user"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="@id/etName"
            app:layout_constraintTop_toTopOf="@id/etName"
            app:layout_constraintBottom_toBottomOf="@id/etName"
            android:layout_marginStart="13dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="Input your password"

            android:background="@drawable/edittext_background"
            android:textColorHint="@color/on_secondary_dimmed"
            android:textColor="@color/on_secondary"

            android:paddingStart="38dp"
            tools:ignore="RtlSymmetry"
            android:textSize="@dimen/edittext_text_size"

            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginTop="24dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_eye"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toTopOf="@id/etPassword"
            app:layout_constraintBottom_toBottomOf="@id/etPassword"
            android:layout_margin="13dp"/>

        <EditText
            android:id="@+id/etRepeatPassword"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:autofillHints="Input your password"

            android:background="@drawable/edittext_background"
            android:textColorHint="@color/on_secondary_dimmed"
            android:textColor="@color/on_secondary"

            android:paddingStart="38dp"
            tools:ignore="RtlSymmetry"
            android:textSize="@dimen/edittext_text_size"

            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginTop="24dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_eye"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="@id/etRepeatPassword"
            app:layout_constraintTop_toTopOf="@id/etRepeatPassword"
            app:layout_constraintBottom_toBottomOf="@id/etRepeatPassword"
            android:layout_margin="13dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"

            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            app:layout_constraintWidth_max="320dp"

            android:background="@drawable/primary_button_ripple"
            android:fontFamily="@font/inter_semi_bold"
            android:textColor="@color/primary"


            android:text="@string/button_sign_up"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"

            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title_already_have_account"
        android:textColor="@color/on_secondary"
        android:textSize="@dimen/button_text_size"

        android:layout_margin="2dp"
        app:layout_constraintEnd_toEndOf="@id/btnLogInScreen"
        app:layout_constraintBottom_toTopOf="@id/btnLogInScreen"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogInScreen"
        android:layout_width="52dp"
        android:layout_height="20dp"

        android:background="@color/transparent"
        android:text="@string/button_log_in_underscored"
        android:textAllCaps="false"
        android:textColor="@color/on_secondary"
        android:textSize="@dimen/button_text_size"
        android:fontFamily="@font/inter_bold"

        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>