<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUserData"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/device_card_ripple"

        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivUserPicture"

            android:contentDescription="@string/descriptor_user_profile_picture"
            android:src="@drawable/ic_profile_pic"

            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUserName"

            tools:text="Bohdan Kalysh"

            android:textSize="@dimen/button_text_size"
            android:textColor="@color/on_secondary"
            android:fontFamily="@font/inter_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivUserPicture"/>

        <ImageView
            android:id="@+id/ivArrowIcon"
            android:layout_width="8dp"
            android:layout_height="8dp"

            android:src="@drawable/ic_down"
            android:importantForAccessibility="no"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvUserName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnAddDevice"

        android:layout_width="@dimen/small_button_height"
        android:layout_height="@dimen/small_button_height"
        android:contentDescription="@string/button_add"
        android:src="@drawable/ic_add"
        android:background="@drawable/secondary_button_ripple"
        android:layout_margin="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddDevice"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp" />

    <FrameLayout
        android:id="@+id/dimmer"
        android:visibility="invisible"
        android:background="@color/dimmer_semi_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="165dp"
        android:layout_height="@dimen/button_height"

        android:text="@string/button_logout"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/accent_red"
        android:background="@drawable/device_card_ripple"

        android:visibility="invisible"
        android:layout_marginTop="4dp"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry"
        app:layout_constraintStart_toStartOf="@id/clUserData"
        app:layout_constraintTop_toBottomOf="@id/clUserData" />

</androidx.constraintlayout.widget.ConstraintLayout>